<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".CV_Benchmark" >

    <org.opencv.android.JavaCameraView
        android:id="@+id/camera_1"
        android:layout_width="299dp"
        android:layout_height="360dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/ipstring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="61dp"
        android:layout_toRightOf="@+id/camera_1"
        android:text="@string/ipstrings" />

    <TextView
        android:id="@+id/myIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ipstring"
        android:layout_alignBottom="@+id/ipstring"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@+id/ipstring"
        android:text="@string/mip" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ipstring"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:text="@string/currtask" />

    <TextView
        android:id="@+id/mytask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/mfps" />

    <TextView
        android:id="@+id/myFPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/mytask"
        android:text="@string/TextView" />

    <Button
        android:id="@+id/btnCaptureFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ipstring"
        android:layout_below="@+id/ipstring"
        android:layout_marginTop="27dp"
        android:text="@string/capture" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCaptureFrame"
        android:layout_below="@+id/btnCaptureFrame"
        android:text="@string/delete" />

</RelativeLayout>
